fix calendar issue on mobile

--- a/css/master-template/common.less
+++ b/css/master-template/common.less
@@ -966,6 +966,12 @@ div#PH_Search_results {
     }
 }
 
+body #group_Header-fixed.searchPageOpen {
+    @media @mobile {
+        max-height: 100%;
+    }
+}
+
 
 
 
